<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bottom_sheet">

    <fragment
        android:id="@+id/nav_bottom_sheet"
        android:name="com.github.falchio.materialdesign.ui.home.BottomSheetFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_buttons"
        android:name="com.github.falchio.materialdesign.ui.buttons.ButtonsFragment"
        android:label="@string/buttons"
        tools:layout="@layout/fragment_buttons" />

    <fragment
        android:id="@+id/nav_toolbar"
        android:name="com.github.falchio.materialdesign.ui.progress_bars.ProgressBarFragment"
        android:label="@string/progress_bar"
        tools:layout="@layout/fragment_progressbar" />


    <fragment
        android:id="@+id/nav_fruits"
        android:name="com.github.falchio.materialdesign.ui.fruits.FruitsFragment"
        android:label="@string/fruits"
        tools:layout="@layout/fragment_fruits" />

    <fragment
        android:id="@+id/nav_nature"
        android:name="com.github.falchio.materialdesign.ui.nature.NatureFragment"
        android:label="@string/nature"
        tools:layout="@layout/fragment_nature" />

    <fragment
        android:id="@+id/nav_collapsing_toolbar"
        android:name="com.github.falchio.materialdesign.ui.collapsing_toolbar_layout.CollapsingFragment"
        android:label="@string/collapsing_toolbar"
        tools:layout="@layout/fragment_collapsing_toolbar" />

    <fragment
        android:id="@+id/nav_bottom_navigation_view"
        android:name="com.github.falchio.materialdesign.ui.bottom_nav_view.BottomNavFragment"
        android:label="@string/bottom_navigation"
        tools:layout="@layout/fragment_bottom_nav_view"/>

</navigation>