<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_buttons"
            android:icon="@drawable/ic_buttons"
            android:title="@string/buttons" />
        <item
            android:id="@+id/nav_toolbar"
            android:icon="@drawable/ic_toolbar_24"
            android:title="@string/toolbar" />

    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_fruits"
            android:icon="@drawable/ic_fruits_24"
            android:title="@string/fruits" />

        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_nature_24"
            android:title="@string/nature"/>
    </group>
</menu>